feature:resolve the compile problem